--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
-    "mocha": "^4.0.1",
+    "chai": "^4.2.0",
     "express": "^4.0.0",
+    "mocha": "^4.0.1",
     "supertest": "^3.0.0"
   },
   "peerDependencies": {
