--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.organization=cmsgov
-sonar.projectKey=REPLACE_ME
+sonar.projectKey=gov.cms.qpp:qpp-shared-healthcheck-node
 sonar.projectName=QPP Shared Health Check Node
 sonar.projectVersion=0.1
 sonar.github.repository=CMSgov/qpp-shared-healthcheck-node
