--- a/.github/workflows/feature-build.yml
+++ b/.github/workflows/feature-build.yml
@@ -33,9 +33,9 @@ jobs:
       - name: Execute Unit Tests
         run: npm run test
 
-
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@c35654669e40ece974c8835211c2e8ad9c802df0 # pin@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#
+#      - name: SonarCloud Scan
+#        uses: sonarsource/sonarcloud-github-action@c35654669e40ece974c8835211c2e8ad9c802df0 # pin@master
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
